# Xplore

./: .gitignore  README.md  check-env-debug.js  check_models.js  create_roadmap_cache.sql  create_user_activity.sql  create_users_table.sql  fix-env.js  fix_supabase_permissions.sql  model_results.txt  next.config.ts  package-lock.json  package.json  pyproject.toml  render.yaml  requirements.txt  supabase_schema.sql
.github/workflows/: deploy.yml  nextjs.yaml
backend/: list_models.py  main.py  models.py
src/app/: globals.css  layout.tsx  page.tsx
src/app/dashboard/: layout.tsx  page.tsx
src/app/login/: page.tsx
src/app/roadmap/: layout.tsx
src/app/roadmap/[id]/: page.tsx
src/app/signup/: page.tsx
src/app/verification/: layout.tsx  page.tsx
src/components/: AuthButton.tsx  ChatMessage.tsx  ChatWidget.tsx  CheckableNode.tsx  DashboardSkeleton.tsx  ProfileSection.tsx  ProjectCard.tsx  RoadmapGenerator.tsx  RoadmapGraphView.tsx  RoadmapModal.tsx  SavedRoadmaps.tsx  StepDetailsPanel.tsx  ThemeToggle.tsx
src/components/dashboard/: ActivityGraph.tsx  DailyGoals.tsx  ProgressHero.tsx  StatsWidgets.tsx
src/components/layout/: Header.tsx  Shell.tsx  Sidebar.tsx
src/components/providers/: AuthProvider.tsx
src/components/roadmap/: RoadmapDetailsPanel.tsx  RoadmapNode.tsx
src/hooks/: useResponseCache.ts
src/lib/: api.ts  firebase.js  gemini.ts  supabase.ts
src/types/: roadmap.ts
src/utils/supabase/: middleware.ts
