[project]
name = "xplore"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "fastapi>=0.128.0",
    "google-genai>=1.0.0",
    "python-dotenv>=1.2.1",
    "supabase>=2.27.2",
    "uvicorn>=0.40.0",
    "openai>=1.0.0",
    "pyjwt>=2.8.0",
    "cryptography>=41.0.0",
]
